in-class-exercise

--- a/SmithForCongress.html
+++ b/SmithForCongress.html
@@ -3,17 +3,68 @@
 <head>
 <title>Smith for Town Council</title>
 <meta charset="utf-8" />
+<link href='http://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Nobile:400,700' rel='stylesheet' type='text/css'>
+<style>
+body {
+	text-align: justify;
+	font-size: 2em;
+	font-family: 'Nobile', sans-serif;
+}
+h1 {
+	color: red;
+	text-align: center;
+	font-family: 'Anton', sans-serif;
+	font-size: 4.5em;
+	margin: 0px;
+}
+h2 {	
+	color: blue;
+	text-align: center;
+	font-family: 'Anton', sans-serif;
+	font-size: 2.37em;
+	margin: 0px;
+}
+h3 {
+	color: red;
+	text-align: center;
+	font-family: 'Anton', sans-serif;
+	font-size: 5.8em;
+	margin: 0px;
+}
+h4 {
+	color: blue;
+	text-align: center;
+	font-family: 'Anton', sans-serif;
+	font-size: 4.5em;
+	margin: 0px;
+}
+h5 {
+	color: red;
+	text-align: center;
+	font-family: 'Anton', sans-serif;
+	font-size: 5.55em;
+	margin: 0px;
+}
+#one {
+	text-align: center;
+}
+</style>
 </head>
 <body>
-Vote Susan Smith for re-election to Lower Merion Town Council!
+<h1>VOTE SUSAN SMITH</h1>
+<h2>FOR RE-ELECTION TO LOWER MERION</h2> 
+<h3>TOWN COUNCIL</h3>
 
-Susan Smith has a track record of proven results. In her previous term, she: 
+<p id="one">Susan Smith has a track record of proven results. In her previous term, she:</p>
+<ul id="list">
+<li>Secured over $250,000 in funding for local business redevelopment</li>
+<li>Planned and built our new waterfront park</li>
+</ul>
+<p>Smith will continue to take a strong stance for education funding.<p> 
+<p>She believes every child in our town needs a great education.</p>
 
-Secured over $250,000 in funding for local business redevelopment 
-Planned and built our new waterfront park
-
-Smith will continue to take a strong stance for education funding. She believes every child in our town needs a great education.
-
-Vote for Susan Smith November 4!
+<h4>VOTE SUSAN SMITH<h4> 
+<h5>NOVEMBER 4TH</h5>
 </body>
 </html>	
