--- a/SmithForCongress.html
+++ b/SmithForCongress.html
@@ -6,44 +6,70 @@
 <link href='http://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Nobile:400,700' rel='stylesheet' type='text/css'>
 <style>
-body {
-	text-align: justify;
-	font-size: 2em;
+#wrapper {
+	width: 80%;
+	margin-left: 10%;
+	text-align: left;
+	font-size: 1em;
 	font-family: 'Nobile', sans-serif;
+}
+#title {
+	border: 5px solid;
+	border-color: blue;	
+}
+#content1 {
+	margin-top: 2em;
+	margin-bottom: 1em;
+	border: 1px solid;
+	border-color: red;
+	float: left;
+	width: 45%;
+	padding: .5em;
+}
+#content2 {
+	margin-top: 2em;
+	margin-bottom: 1em;
+	border: 1px solid;
+	border-color: red;
+	float: right;
+	width: 45%;
+	padding: .5em;
+	height: 10em;
 }
 h1 {
 	color: red;
 	text-align: center;
 	font-family: 'Anton', sans-serif;
-	font-size: 4.5em;
+	font-size: 8em;
 	margin: 0px;
 }
 h2 {	
 	color: blue;
 	text-align: center;
 	font-family: 'Anton', sans-serif;
-	font-size: 2.37em;
+	font-size: 4em;
 	margin: 0px;
 }
 h3 {
 	color: red;
 	text-align: center;
 	font-family: 'Anton', sans-serif;
-	font-size: 5.8em;
+	font-size: 10em;
 	margin: 0px;
 }
 h4 {
+	margin-top: 0em;
 	color: blue;
-	text-align: center;
 	font-family: 'Anton', sans-serif;
-	font-size: 4.5em;
+	font-size: 8.566em;
+	float: left;
 	margin: 0px;
 }
 h5 {
 	color: red;
-	text-align: center;
 	font-family: 'Anton', sans-serif;
-	font-size: 5.55em;
+	float: left;
+	font-size: 10.5em;
 	margin: 0px;
 }
 #one {
@@ -52,19 +78,28 @@ h5 {
 </style>
 </head>
 <body>
-<h1>VOTE SUSAN SMITH</h1>
-<h2>FOR RE-ELECTION TO LOWER MERION</h2> 
-<h3>TOWN COUNCIL</h3>
-
-<p id="one">Susan Smith has a track record of proven results. In her previous term, she:</p>
-<ul id="list">
-<li>Secured over $250,000 in funding for local business redevelopment</li>
-<li>Planned and built our new waterfront park</li>
-</ul>
-<p>Smith will continue to take a strong stance for education funding.<p> 
-<p>She believes every child in our town needs a great education.</p>
-
-<h4>VOTE SUSAN SMITH<h4> 
-<h5>NOVEMBER 4TH</h5>
+<div id="wrapper">
+	<div id="title">
+		<h1>VOTE SUSAN SMITH</h1>
+		<h2>FOR RE-ELECTION TO LOWER MERION</h2> 
+		<h3>TOWN COUNCIL</h3>
+	</div>
+	<div id="content1">
+		<p id="one">Susan Smith has a track record of proven results.</p> 
+		<p>In her previous term, she:</p>
+		<ul id="list">
+			<li>Secured over $250,000 in funding for local business redevelopment</li>
+			<li>Planned and built our new waterfront park</li>
+		</ul>
+	</div>
+	<div id="content2">
+		<p id="one">Smith will continue to take a strong stance for education funding.<p> 
+		<p id="one">She believes every child in our town needs a great education.</p>
+	</div>
+	<div id="title2">
+		<h4>VOTE SUSAN SMITH<h4> 
+		<h5>NOVEMBER 4TH</h5>
+	</div>
+</div>
 </body>
 </html>	
